Address recognition added